k8s/displayapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: displayapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: displayapp
  template:
    metadata:
      labels:
        app: displayapp
    spec:
      containers:
        - name: displayapp
          image: khalilghibran/displayapp:latest
          ports:
            - containerPort: 5000
