k8s/inputapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inputapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inputapp
  template:
    metadata:
      labels:
        app: inputapp
    spec:
      containers:
        - name: inputapp
          image: yourdockerusername/inputapp:latest
          ports:
            - containerPort: 5000
