k8s/displayapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: displayapp
spec:
  selector:
    app: displayapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
