k8s/inputapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inputapp
spec:
  selector:
    app: inputapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
