k8s/tubes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubes-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /input
            pathType: Prefix
            backend:
              service:
                name: inputapp
                port:
                  number: 5000
          - path: /display
            pathType: Prefix
            backend:
              service:
                name: displayapp
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: displayapp
                port:
                  number: 5000
